--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Source+Sans+Pro&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,11 +8,13 @@
 body {
   background: black url('/src/resources/images/tcbb_bg.jpg') no-repeat bottom fixed;
   background-size: cover;
+  font-family: 'Source Sans Pro', sans-serif;
   position: relative;
   min-height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'Merriweather', serif;
   text-align: center;
 }
 
